Add comprehensive Geospatial Concepts & Glossary page
Create new concepts.qmd page covering foundational spatial data knowledge:
- Spatial data types (vector vs raster) with visual comparison
- Web services (WFS/WCS) with workflow diagrams and EPSG code explanation
- Coordinate reference systems with orange peel analogy and projection comparisons
- CRS examples showing WGS84, Web Mercator, and LAEA with Europe/Greenland
- Key R packages (sf, terra) and their use cases
- Common spatial operations for vector and raster data
- Data formats and their implications for web service requests
- Bounding boxes with North Sea example visualization
- Glossary table with 23 common geospatial terms
- External resources organized by category

Add Geospatial Concepts link to main navigation in _quarto.yml

Move EMODnet web services maintenance information from concepts to About page for better organizational context

All figures include proper labels for cross-referencing (fig-*, tbl-*) and are referenced in text. Plots use hidden R code with :: notation.

--- a/about.qmd
+++ b/about.qmd
@@ -19,6 +19,19 @@ These tutorials were developed as part of the **EMODnet Biology** initiative to 
 
 The tutorials highlight how EMODnet data can be integrated with other European marine data infrastructures, such as Copernicus Marine Service, to support evidence-based marine management and research.
 
+## EMODnet Web Services
+
+EMODnet provides standardized geospatial web services following Open Geospatial Consortium (OGC) specifications. These services are maintained by the EMODnet thematic portals (Biology, Bathymetry, Seabed Habitats, Human Activities, etc.), each operated by a consortium of European marine research institutions.
+
+Each thematic portal is responsible for:
+
+- Aggregating data from multiple sources across Europe
+- Standardizing and quality-controlling the data
+- Hosting and maintaining the web service infrastructure
+- Ensuring long-term data preservation and access
+
+This infrastructure enables researchers and practitioners to programmatically access marine data without needing to manage large file downloads or navigate multiple data repositories.
+
 ## The R Packages
 
 These tutorials demonstrate two R packages developed specifically for accessing EMODnet data services:
